--- a/extra-tests/classes/RollupFinalizerTests.cls
+++ b/extra-tests/classes/RollupFinalizerTests.cls
@@ -9,12 +9,12 @@ private class RollupFinalizerTests {
   @IsTest
   static void shouldRestartRollupWhenQueueableFails() {
     Account acc = [SELECT Id FROM Account];
-    RollupFinalizer.testResult = ParentJobResult.UNHANDLED_EXCEPTION;
 
-    Rollup roll = Rollup.sumFromApex(Opportunity.Amount, Opportunity.AccountId, Account.Id, Account.AnnualRevenue, Account.SObjectType);
+    RollupFinalizer.testResult = ParentJobResult.UNHANDLED_EXCEPTION;
     Rollup.records = new List<Opportunity>{ new Opportunity(AccountId = acc.Id, Amount = 5) };
     Rollup.shouldRun = true;
     Rollup.apexContext = TriggerOperation.AFTER_INSERT;
+    Rollup roll = Rollup.sumFromApex(Opportunity.Amount, Opportunity.AccountId, Account.Id, Account.AnnualRevenue, Account.SObjectType);
 
     Test.startTest();
     new RollupFinalizer(roll).execute(null);
@@ -22,5 +22,16 @@ private class RollupFinalizerTests {
 
     acc = [SELECT AnnualRevenue FROM Account];
     System.assertEquals(5, acc.AnnualRevenue);
+  }
+
+  @IsTest
+  static void shouldGracefullyRecoverFromThrownException() {
+    RollupFinalizer.testResult = ParentJobResult.UNHANDLED_EXCEPTION;
+
+    Test.startTest();
+    new RollupFinalizer(null).execute(null);
+    Test.stopTest();
+
+    System.assert(true, 'Should make it here');
   }
 }
