Fixes #164 by adding support for multi-character concat delimiters

--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -661,7 +661,7 @@ private class RollupCalculatorTests {
       Rollup.Op.CONCAT_DISTINCT,
       Opportunity.Name,
       Account.Name,
-      new Rollup__mdt(ConcatDelimiter__c = ';'),
+      new Rollup__mdt(ConcatDelimiter__c = ' -- '),
       '0011g00003VDGbF002',
       Opportunity.AccountId
     );
@@ -669,7 +669,7 @@ private class RollupCalculatorTests {
     Opportunity nonDistinctOpp = new Opportunity(Id = '0066g00003VDGbF001', Name = 'non' + distinct, AccountId = '0016g00003VDGbF001');
     calc.performRollup(new List<Opportunity>{ opp, nonDistinctOpp }, new Map<Id, SObject>());
 
-    System.assertEquals(distinct + '; ' + nonDistinctOpp.Name, (String) calc.getReturnValue(), 'distinct values should be concatenated with custom delimiter!');
+    System.assertEquals(distinct + ' -- ' + nonDistinctOpp.Name, (String) calc.getReturnValue(), 'distinct values should be concatenated with custom delimiter!');
   }
 
   @IsTest
