--- a/rollup/core/classes/RollupEvaluator.cls
+++ b/rollup/core/classes/RollupEvaluator.cls
@@ -157,7 +157,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
     private final Set<String> splitWheres = new Set<String>();
 
     public WhereFieldEvaluator(String whereClause, SObjectType calcItemSObjectType) {
-      whereClause = whereClause == null ? '' : whereClause;
+      whereClause = whereClause == null ? '' : whereClause.replaceAll('(\n|\r|\t)', '');
       this.originalWhereClause = whereClause;
 
       if (String.isNotBlank(whereClause)) {
@@ -231,11 +231,12 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
     private Boolean innerMatches(Object calcItem) {
       Boolean matches = calcItem instanceof SObject;
       if (matches) {
-        for (ConditionalGrouping conditionalGrouping : this.conditionalGroupings) {
+        for (Integer index = 0; index < this.conditionalGroupings.size(); index++) {
+          ConditionalGrouping conditionalGrouping = this.conditionalGroupings[index];
           Boolean hasInnerMatch = conditionalGrouping.equals(calcItem);
           addLog(conditionalGrouping, hasInnerMatch, calcItem, LoggingLevel.FINEST);
-          if (hasInnerMatch && conditionalGrouping.isOrConditional()) {
-            matches = true;
+          if (conditionalGrouping.isOrConditional()) {
+            matches = index == 0 ? hasInnerMatch : hasInnerMatch || matches;
           } else if (conditionalGrouping.isOrConditional() == false) {
             matches = matches && hasInnerMatch;
           }
@@ -373,9 +374,9 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       Boolean isOr = false;
       Boolean isFirstConditional = fullString.indexOf(conditionalStatement) == 0;
       if (isFirstConditional == false) {
-        Integer whereWeAreInTheFullString = fullString.indexOf(conditionalStatement) + conditionalStatement.length();
+        Integer whereWeAreInTheFullString = fullString.indexOf(conditionalStatement);
         // 5 is enough to encapsulate " or " with spaces
-        Integer clauseStartingIndex = whereWeAreInTheFullString - (conditionalStatement.length() + 5);
+        Integer clauseStartingIndex = whereWeAreInTheFullString - 5;
         if (clauseStartingIndex > 0) {
           isOr = fullString.substring(clauseStartingIndex, whereWeAreInTheFullString).containsIgnoreCase(' or ');
         }
@@ -543,7 +544,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       }
     }
 
-    @SuppressWarnings('PMD.OverrideBothEqualsAndHashCode, PMD.EmptyIfStmt')
+    @SuppressWarnings('PMD.OverrideBothEqualsAndHashCode')
     public Boolean equals(Object o) {
       SObject item = (SObject) o;
       Boolean isEqual = true;
@@ -564,9 +565,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
           // like/not like have to be handled separately because it's the storedValue
           // that gets tested against, not the other way around
           isEqual = false;
-          if (storedValue == null) {
-            // do nothing
-          } else {
+          if (storedValue != null) {
             for (String val : this.values) {
               isEqual = storedValue.contains(val);
               if (isEqual) {
