Fixes #173 with the addition of RollupCalcItemReplacer - removes some synchronous code from Rollup.cls that was previously replacing calc items in-situ when they had polymorphic where clauses, in favor of delegating when the replacement is made to the RollupCalcItemReplacer. Added RollupControl__mdt.ReplaceCalcItemsAsyncWhenOverCount__c, which is checked by the RollupCalcItemReplacer when considering whether to run sync or async

--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -11,7 +11,7 @@ private class RollupFullRecalcTests {
   @IsTest
   static void shouldSortFullRecalcsToEnd() {
     RollupAsyncProcessor actualProcessor = RollupAsyncProcessor.getProcessor(
-      new Set<Id>(),
+      new Rollup.FilterResults(),
       Contact.Id,
       Contact.AccountId,
       Account.Id,
@@ -19,7 +19,6 @@ private class RollupFullRecalcTests {
       Account.SObjectType,
       Contact.SObjectType,
       Rollup.Op.SUM,
-      null,
       Rollup.InvocationPoint.FROM_APEX,
       null,
       null
