Fixes #179 by properly filtering CMDT records disassociated with the current rollup for grandparent rollups

--- a/extra-tests/classes/RollupIntegrationTests.cls
+++ b/extra-tests/classes/RollupIntegrationTests.cls
@@ -683,6 +683,7 @@ private class RollupIntegrationTests {
 
   @IsTest
   static void shouldAllowIntermediateCustomObjectCalcItemWhereClauseFiltering() {
+    Rollup.onlyUseMockMetadata = true;
     Account greatGrandparent = new Account(Name = 'Great-grandparent NonFiltered');
     insert greatGrandparent;
 
